Simulink LQR + PI

--- a/DAMH 2/DAMH 2.ioc
+++ b/DAMH 2/DAMH 2.ioc
@@ -4,7 +4,7 @@ CAD.pinconfig=
 CAD.provider=
 FREERTOS.FootprintOK=true
 FREERTOS.IPParameters=Tasks01,FootprintOK
-FREERTOS.Tasks01=MPU6050Task,-1,128,StartMPU6050ask,Default,NULL,Dynamic,NULL,NULL;FunctionTask,0,128,StartTaskFunction,Default,NULL,Dynamic,NULL,NULL
+FREERTOS.Tasks01=MPU6050Task,-1,128,StartMPU6050ask,Default,NULL,Dynamic,NULL,NULL;FunctionTask,0,128,StartTaskFunction,Default,NULL,Dynamic,NULL,NULL;Cal_PID,0,128,StartTaskCalPID,Default,NULL,Dynamic,NULL,NULL
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
