--- a/DAMH 2/DAMH 2.ioc
+++ b/DAMH 2/DAMH 2.ioc
@@ -4,7 +4,7 @@ CAD.pinconfig=
 CAD.provider=
 FREERTOS.FootprintOK=true
 FREERTOS.IPParameters=Tasks01,FootprintOK
-FREERTOS.Tasks01=MPU6050Task,-1,128,StartMPU6050ask,Default,NULL,Dynamic,NULL,NULL;FunctionTask,0,128,StartTaskFunction,Default,NULL,Dynamic,NULL,NULL;Cal_PID,0,128,StartTaskCalPID,Default,NULL,Dynamic,NULL,NULL
+FREERTOS.Tasks01=MPU6050Task,-1,128,StartMPU6050ask,Default,NULL,Dynamic,NULL,NULL;FunctionTask,0,128,StartTaskFunction,Default,NULL,Dynamic,NULL,NULL;Cal_PID,-2,128,StartTaskCalPID,Default,NULL,Dynamic,NULL,NULL
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
@@ -18,17 +18,22 @@ Mcu.IP4=SYS
 Mcu.IP5=TIM2
 Mcu.IP6=TIM3
 Mcu.IP7=TIM4
-Mcu.IPNb=8
+Mcu.IP8=TIM5
+Mcu.IP9=USART1
+Mcu.IPNb=10
 Mcu.Name=STM32F407V(E-G)Tx
 Mcu.Package=LQFP100
 Mcu.Pin0=PH0-OSC_IN
 Mcu.Pin1=PH1-OSC_OUT
-Mcu.Pin10=PA13
-Mcu.Pin11=PA14
-Mcu.Pin12=PB6
-Mcu.Pin13=PB7
-Mcu.Pin14=VP_FREERTOS_VS_CMSIS_V1
-Mcu.Pin15=VP_SYS_VS_tim14
+Mcu.Pin10=PA9
+Mcu.Pin11=PA10
+Mcu.Pin12=PA13
+Mcu.Pin13=PA14
+Mcu.Pin14=PB6
+Mcu.Pin15=PB7
+Mcu.Pin16=VP_FREERTOS_VS_CMSIS_V1
+Mcu.Pin17=VP_SYS_VS_tim14
+Mcu.Pin18=VP_TIM5_VS_ClockSourceINT
 Mcu.Pin2=PA0-WKUP
 Mcu.Pin3=PA1
 Mcu.Pin4=PA6
@@ -37,7 +42,7 @@ Mcu.Pin6=PB0
 Mcu.Pin7=PB1
 Mcu.Pin8=PD12
 Mcu.Pin9=PD13
-Mcu.PinsNb=16
+Mcu.PinsNb=19
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F407VETx
@@ -59,15 +64,20 @@ NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:true\:false
 NVIC.TIM8_TRG_COM_TIM14_IRQn=true\:15\:0\:false\:false\:true\:false\:false\:true\:true
 NVIC.TimeBase=TIM8_TRG_COM_TIM14_IRQn
 NVIC.TimeBaseIP=TIM14
+NVIC.USART1_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 PA0-WKUP.Signal=S_TIM2_CH1_ETR
 PA1.Signal=S_TIM2_CH2
+PA10.Mode=Asynchronous
+PA10.Signal=USART1_RX
 PA13.Mode=Serial_Wire
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.Mode=Serial_Wire
 PA14.Signal=SYS_JTCK-SWCLK
 PA6.Signal=S_TIM3_CH1
 PA7.Signal=S_TIM3_CH2
+PA9.Mode=Asynchronous
+PA9.Signal=USART1_TX
 PB0.Signal=S_TIM3_CH3
 PB1.Signal=S_TIM3_CH4
 PB6.Mode=I2C
@@ -111,7 +121,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_I2C1_Init-I2C1-false-HAL-true,4-MX_TIM2_Init-TIM2-false-HAL-true,5-MX_TIM3_Init-TIM3-false-HAL-true,6-MX_TIM4_Init-TIM4-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_I2C1_Init-I2C1-false-HAL-true,4-MX_TIM2_Init-TIM2-false-HAL-true,5-MX_TIM3_Init-TIM3-false-HAL-true,6-MX_TIM4_Init-TIM4-false-HAL-true,7-MX_USART1_UART_Init-USART1-false-HAL-true
 RCC.48MHZClocksFreq_Value=36000000
 RCC.AHBFreq_Value=72000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
@@ -171,10 +181,17 @@ TIM3.Period=999
 TIM3.Prescaler=6
 TIM4.EncoderMode=TIM_ENCODERMODE_TI12
 TIM4.IPParameters=EncoderMode
+TIM5.IPParameters=Prescaler,Period
+TIM5.Period=1000-1
+TIM5.Prescaler=72-1
+USART1.IPParameters=VirtualMode
+USART1.VirtualMode=VM_ASYNC
 VP_FREERTOS_VS_CMSIS_V1.Mode=CMSIS_V1
 VP_FREERTOS_VS_CMSIS_V1.Signal=FREERTOS_VS_CMSIS_V1
 VP_SYS_VS_tim14.Mode=TIM14
 VP_SYS_VS_tim14.Signal=SYS_VS_tim14
+VP_TIM5_VS_ClockSourceINT.Mode=Internal
+VP_TIM5_VS_ClockSourceINT.Signal=TIM5_VS_ClockSourceINT
 board=custom
 rtos.0.ip=FREERTOS
 isbadioc=false
